@@ -1,3 +1,5 @@
+* IMPROVEMENT: Added deprecated and obsolete times to hash functions.
+* IMPROVEMENT: SHA-1 is deprecated as of 01.07.2016T00:00 UTC.
 * IMPROVEMENT: Added KSI_SignatureBuilder_createSignatureWithAggregationChain function.
 * IMPROVEMENT: Removed calendar-based verification from the default verification policy.
 * IMPROVEMENT: New verification rule for verifing document hash algorithm.
